[tool.poetry]
name = "networkScanner"
version = "0.1.0"
description = "Written for my A level computer science NEA(Non-Examined Assessment). Essentially nmap but written in python standard library functions."
authors = ["tritoke <tritoke@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^4.2"

[tool.poetry.dev-dependencies]
mypy = "flake8"
pycodestyle = "^2.5"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
